--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
   box-sizing: border-box; }
 
 #canvas canvas {
-  padding-top: 20px; }
+  padding-top: 20px;
+  width: auto;
+  height: 100vh; }
 
 #toolbar {
   padding-top: 20px;
@@ -17,3 +19,6 @@
 #toolbar .button:hover {
   box-shadow: 5px 5px 15px black;
   cursor: move; }
+
+#palette {
+  display: none; }
