--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@
 .shadow {
   box-shadow: 5px 5px 15px grey;
   margin: 0; }
+  .shadow .color-bar {
+    margin-top: 12px; }
+    .shadow .color-bar #palette {
+      margin-right: 5px; }
 
 #toolbar .button:hover {
   box-shadow: 5px 5px 15px black;
-  cursor: move; }
-
-#palette {
-  display: none; }
+  cursor: pointer; }
