--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,31 @@ body {
     height: 100vh;
     box-shadow: 5px 5px 15px grey;
     overflow: auto; }
-    .aside-left #toolbar2 img {
-      width: 50px; }
+    .aside-left #toolbar2 #filepicker {
+      display: none; }
+    .aside-left #toolbar2 #listing img {
+      width: 100%;
+      height: auto;
+      padding: 0; }
 
 #canvas canvas {
   padding-top: 15px;
   width: auto;
   height: 100vh; }
+
+::-webkit-scrollbar {
+  width: 10px; }
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px; }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: dimgrey;
+  border-radius: 10px; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: dimgrey; }
